Rewrite URL and Path resolving with built-in resolve function